--- a/environment.yml
+++ b/environment.yml
@@ -3,59 +3,57 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - colorama=0.4.1=py37_0
-  - ipykernel=5.1.*
-  - ipython=7.6.*
-  - ipython_genutils=0.2.*
-  - ipywidgets=7.5.*
-  - joblib=0.13.*
-  - json5=0.8.*
-  - jsonschema=3.0.*
-  - jupyter=1.0.*
-  - jupyter_client=5.3.*
-  - jupyter_console=6.0.*
-  - jupyter_contrib_core=0.3.*
-  - jupyter_core=4.5.*
-  - jupyter_nbextensions_configurator=0.4.*
-  - jupyterlab=1.0.*
-  - jupyterlab_server=1.0.*
-  - keras=2.2.4=0
-  - keras-applications=1.0.*
-  - keras-base=2.2.*
-  - keras-preprocessing=1.1.*
-  - markdown=3.1.*
-  - markupsafe=1.1.*
-  - matplotlib=3.1.*
-  - numpy=1.16.*
-  - pandas=0.23.*
-  - pickleshare=0.7.*
-  - pip=19.1.1
-  - plotly=4.0.*
-  - python=3.7
-  - python-dateutil=2.8.*
-  - pyyaml=5.1.*
-  - requests=2.22.*
-  - ruamel_yaml=0.15.*
-  - scikit-image=0.15.*
-  - scikit-learn=0.21.*
-  - scipy=1.3.*
-  - seaborn=0.9.*
-  - shapely=1.6.*
-  - statsmodels=0.10.*
-  - tensorboard=1.13.*
-  - tensorflow=1.13.*
-  - tensorflow-base=1.13.*
-  - tensorflow-estimator=1.13.*
-  - urllib3=1.24.*
-  - werkzeug=0.15.*
-  - wheel=0.33.*
-  - widgetsnbextension=3.5.*
-  - xgboost=0.90
-  - xlsxwriter=1.1.*
-  - yaml=0.1.*
+  - colorama
+  - ipykernel
+  - ipython
+  - ipython_genutils
+  - ipywidgets
+  - joblib
+  - json5
+  - jsonschema
+  - jupyter
+  - jupyter_client
+  - jupyter_console
+  - jupyter_contrib_core
+  - jupyter_core
+  - jupyter_nbextensions_configurator
+  - jupyterlab
+  - jupyterlab_server
+  - keras
+  - keras-applications
+  - keras-base
+  - keras-preprocessing
+  - markdown
+  - markupsafe
+  - matplotlib
+  - numpy
+  - pandas
+  - pickleshare
+  - pip
+  - plotly
+  - python=3.7.*
+  - python-dateutil
+  - pyyaml
+  - requests
+  - ruamel_yaml
+  - scikit-learn
+  - scipy
+  - seaborn
+  - shapely
+  - statsmodels
+  - tensorboard
+  - tensorflow
+  - tensorflow-base
+  - tensorflow-estimator
+  - urllib3
+  - werkzeug
+  - wheel
+  - widgetsnbextension
+  - xlsxwriter
+  - yaml
   - pip:
     - tabulate
     - pdfrw
     - reportlab
-    - termcolor==1.1.0
-    - tzwhere==3.*
+    - termcolor
+    - tzwhere
