--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ matplotlib==3.2.1
 numpy==1.18.3
 pandas==1.0.3
 PDPbox==0.2.0
+pdp==0.3.0
 plotly==4.6.0
 pyparsing==2.4.7
 python-dateutil==2.8.1
@@ -23,7 +24,7 @@ pytz==2020.1
 PyYAML==5.3.1
 requests==2.23.0
 scipy==1.4.1
-scikit-learn==0.22.2.post1
+scikit-learn==0.23.1
 seaborn==0.10.1
 Shapely==1.7.0
 six==1.14.0
