--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -5,9 +5,9 @@ name: Python application
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, github-actions ]
   pull_request:
-    branches: [ master ]
+    branches: [ master, github-actions ]
 
 jobs:
   build:
