--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -3,11 +3,12 @@
 
 name: Python application
 
-on:
-  push:
-    branches: [ master, github-actions ]
-  pull_request:
-    branches: [ master, github-actions ]
+on: [push]
+#on:
+#  push:
+#    branches: [ master, github-actions ]
+#  pull_request:
+#    branches: [ master, github-actions ]
 
 jobs:
   build:
@@ -28,9 +29,12 @@ jobs:
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        # flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
         pytest
+    - name: Build package
+      run: |
+        python setup.py sdist bdist_wheel
