--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -12,15 +12,19 @@ on: [push]
 
 jobs:
   build:
-
+    name: Test on ${{ matrix.container }}
     runs-on: ubuntu-latest
+    container: ${{ matrix.container }}
+    strategy:
+      matrix:
+        container:
+          - python:3.8
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.8
+    - uses: actions/checkout@v1
+    - name: Check Python version
+      run: |
+        python -V
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
